# drf-api-permissions

./: db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
review_api_project/: asgi.py  settings.py  urls.py  wsgi.py
write/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
write/migrations/: 0001_initial.py
